==============
lxml changelog
==============

Under development
=================

Features added
--------------

* ``lxml.html.rewrite_links()`` strips links to work around documents
  with whitespace in URL attributes.

Bugs fixed
----------

* CSS selector parser dropped remaining expression after a function
  with parameters.

Other changes
-------------


2.0.7 (2008-06-20)
==================

Features added
--------------

* Pickling ``ElementTree`` objects in lxml.objectify.

Bugs fixed
----------

* Descending dot-separated classes in CSS selectors were not resolved
  correctly.

* ``ElementTree.parse()`` didn't handle target parser result.

* Potential threading problem in XInclude.

* Crash in Element class lookup classes when the __init__() method of
  the super class is not called from Python subclasses.

Other changes
-------------

* Non-ASCII characters in attribute values are no longer escaped on
  serialisation.


2.1beta3 (2008-06-19)
=====================

Features added
--------------

* Major overhaul of ``tools/xpathgrep.py`` script.

* Pickling ``ElementTree`` objects in lxml.objectify.

* Support for parsing from file-like objects that return unicode
  strings.

* New function ``etree.cleanup_namespaces(el)`` that removes unused
  namespace declarations from a (sub)tree (experimental).

* XSLT results support the buffer protocol in Python 3.

* Polymorphic functions in ``lxml.html`` that accept either a tree or
  a parsable string will return either a UTF-8 encoded byte string, a
  unicode string or a tree, based on the type of the input.
  Previously, the result was always a byte string or a tree.

* Support for Python 2.6 and 3.0 beta.

* File name handling now uses a heuristic to convert between byte
  strings (usually filenames) and unicode strings (usually URLs).

* Parsing from a plain file object frees the GIL under Python 2.x.

* Running ``iterparse()`` on a plain file (or filename) frees the GIL
  on reading under Python 2.x.
