@@ -8,6 +8,9 @@ Under development
 Features added
 --------------
 
+* Custom resolvers are now used for XMLSchema includes/imports and
+  XInclude processing.
+
 * ``lxml.html.rewrite_links()`` strips links to work around documents
   with whitespace in URL attributes.
 
